@@ -9,15 +9,25 @@ AUX wireshark-1.99.0.1975-gcc_option.patch 2939 SHA256 4d534da5b4a45f311a622108a
 AUX wireshark-1.99.0.1975-sse4_2.patch 555 SHA256 bef93463a257b6154cf55f85e7860b373264e2a89f212f6db773ad02f3a6bedf SHA512 5086b36ecf9b1dd3292011602c8824a572dc759a0e35049a39f0da8045a93738a8f2c2b4c053a0f1d999dc8cdb7bfec3b33f2780d8795135dd65984355485578 WHIRLPOOL 55301e3ff688fbe7df405d40dd8a6e942d1613ee0e4543f46fa83ac6f0688170753fe1cfc67bbe00b9bd7a46cf73513530cc746ee29ba7845e3a45d12ed07743
 DIST wireshark-1.12.1.tar.bz2 29059989 SHA256 82b26bd416ec15903b27785e35a622687008a743342054e96eaaeaa249be584b SHA512 840f348c8cdaa0e4d96c34e0a752f3d575d975ac8e61b31f6456a0eba4b484268651c96b943cfe213a6c40edcb18670ec921564413c052fcafdf32b2c8523929 WHIRLPOOL f98131bde6680370943cf6070cb44c6ad96d42060573e521051b81ad9d934b03741bb4d75a1d30762eebf5f22387f9eb7158acee4caee2503c4eafff52a12ada
 DIST wireshark-1.99.0.tar.bz2 29782811 SHA256 9454180264c288c0ae03dfc3856310e319acf29f7b2e8a8ea2fd91665b606364 SHA512 021d4adfe8a6a326def81daa79ede1fea8a214f6d9f9c3f1cb008a36e82fe42655cc6c6f4de2a425181e03e61f3dba5cad2ebb11605d29f4bbc0623f66f0d3db WHIRLPOOL 04e22741d28b4576bfceb1c0507fd8cce7b7781999245e1cc8cd1ae2063f62fa518c007f42826a445acf99f18c61b7b9f3deb67629438e7e3c9276d2282a5793
-EBUILD wireshark-1.12.1.ebuild 5574 SHA256 e83bbbcf29e7797abf3e15003984e1e70efcefa696417de68cbe62cf5c6c5625 SHA512 c4db05056c9e5c94d8df00419020ba22f5f4315b96040d067dccefe723e0805c24d088e4ca623a9b8d763ea4eebb284fad2cef6b390def1e84fd55b50d01debb WHIRLPOOL 0071b99ac8d7afaaf81246333957ec628b0089ee9ec1ac3915d2258f9f5f56cf0c0d316e979acd866dacc85ed858e7a31064ac38ad8e252d2b9191d3f6e34052
-EBUILD wireshark-1.99.0-r1.ebuild 6003 SHA256 b3ce80b98152f20d60ebfe385f740204f2bf67d503661e8f338dd7102a82d322 SHA512 bed04248280422e9f248652097906655d6f14eb9019b0bf42a88d349eb93a5f722b55ba092c26c041af5fa0bb40c77315bdc07f78ba08fb70fce43448e68bdca WHIRLPOOL 855f22708e09e48884d82c061a697c49bee2a3a4bbdecf74b0ccc89f43a33ec08b618ec588d6f42ec68c7d160a53b1742c5e6f726013e8fa120c862ba9734960
-EBUILD wireshark-99999999.ebuild 6043 SHA256 ef1b2a09f1c5a926994c9cddbe58470c821ea2624d9d52f19344e4a65bdfcc9a SHA512 e1b8a250bc4191b840284dcf88d271d15f154821b4d81b9aa9f7abcb829e34e8abd02ac4573cbb87fddcbc32fb27bc11b6d893443675d024e9dda92ff1ac6a30 WHIRLPOOL 724936358573c537520e5d8cc37c9160530e3d21c8eab98d9b25ba83cdde6ac811c07930f6cef5604b5f3a5a51307487884ed3c4266e256175ea23ed787796a5
-MISC ChangeLog 97002 SHA256 7fbe448f0d9ff9d4bd161eda145d7b2a5933ff47fdfbffa15f0e3b5298d76cfe SHA512 25debe07a6a44ced09ac7786867f268bb8412ad069618ca9edc59ba1744e492462125410d4de721e9a9972ccd8bff119500e5be12575c2e5814115deec4fb774 WHIRLPOOL 95e3190e9e2fe94edc5290124204eb14acde7d217dedba5e83265ddf3650f1725e3dc3e37c172623e143c248d0fdd1b041fa2dc80b29b16e55a0f8899c273b3c
+EBUILD wireshark-1.12.1.ebuild 5597 SHA256 993905b4d7671f3959306b282c5756f30f372b3f14e6034432f5a6e7640d928d SHA512 64e3f379ce1bd5c251d98a366c8340e6127b957f206b788e5cb0c18620d10bd2853315ce79e966d9d5eecd2bbcc0b5dd1c888583785ca621b90efc8d391604aa WHIRLPOOL b6023d2206151b3f6af4e23dc5a5c396a289ee3166259104ac543a268d15b86acaa342e6844bd96ea84211593c22b4903c7a5d34a546759504a730e67ca3c711
+EBUILD wireshark-1.99.0-r1.ebuild 6026 SHA256 ab04c651ca463574e5d9d0f2dceca5158d123b6c475c0e2b1c1b335848964395 SHA512 3c0cbd15e41d9fe39498981652cc1fbcf42adf68b26e5407a2835d6356b84377ddaefd8e462f13082ad6a7bd03397a5ed90b9335e479a2140d024b29609c0b24 WHIRLPOOL 58ffe25b2ad17ed1ba295759ae2f76861fde09c7ea17ca9227ba4a2805c16a46d5d2bc7d4914a8d618d031b5cea63f5451a1f2e47533a92421098c29cda3dbf5
+EBUILD wireshark-99999999.ebuild 6069 SHA256 71f1eb0314a73bf8d80fa86eb42dec87fb3ab130df40262dafaf3e51a67f5758 SHA512 ff31425114af734296c53da4bc5004bf0b3d9ec854f338ec54b25102c108fc8bafbc92ab12e248648cd0966a2e6d096e156db0cac2489add4281a49d1cfebb47 WHIRLPOOL 0e6c69738344b201a6b81cf0c8d986aa18324b93cbc866b2c05f70c130ad6cfdefc9842cedeacf0f928b8b29d2c426051722dd95a7e20a78f099bda9b68a93ef
+MISC ChangeLog 97225 SHA256 f53a687dc98b4f2a567e9859c1a3a29a01569ca58fbd85d5aa2afca4f54123f4 SHA512 bbbdef60437d403bbb13b8d3e23af2af76273f8b9fdb57ccd95425c228af62235228aa6995769a6ff61d1865dad4280e900ef7a53663eff726dfa321605fb667 WHIRLPOOL d940a3bf0828e619a6c3db4004da962a34f53754738a290f9943014857ffb90b59bd2355af544fd1377ef03dbdce14ff01b92923471dfbe69ce3d72c9ba113b7
 MISC metadata.xml 2460 SHA256 c764e8b164a3c24ee43cbbd46f3ce01b4015da62e9d29b1117868a3644497dc5 SHA512 f957bb3ce85ede2c8944581e116160fb601c1dddcc7cfdfa9b6a39fe5c9c7e51afe686369681a31ebc231a46aac33be5223730b1143f1895deb7569a606f2fd2 WHIRLPOOL 57259e5c67ec9d2dfd7ae69f17146a514915e4f3d0031eaebbdd9640f4b11ad9df25de71f223cf4df044bfa749a148ee5069faf790060761d800476e56619f26
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlRSz2kACgkQVWmRsqeSphNr1wCaAyATc3R4fMvnX017JSuX3am3
-DEsAn2zzeH06TA5GgRzOsYODrttud7Vo
-=SK+Y
+iQIcBAEBCAAGBQJUVh7fAAoJEC7dUkA7aK9H1loP/3bbQVi0OTkgdvnPnjCOWqZF
+6kE03GqlsKT2zFjGdzpcL/xMRThhrb5fC0+3Lbmhl9GtbaQ9MBE70swI0e5Ugbti
+0fmsGDo2IoTlA53mwhtOeASgeLnoyFIZ0fmmrvmlGPLkV9cYK1yD4SjR4jFhGOno
+91Azu7yt41GYsReQsjzcsJai3N94eEFu58m6Oc6Y5HiUD/OeKobUw1bSwtF/3zYC
+qPCHdkDwCKyhJQdNfB9Ce5xReDIu78KVlVECSvmKaOchWH4+cMtsLH9HBfUKogdh
+1BImGmuVKrZbDkDzkua3O7DD78zB/ImM2J3zrC7gWFOlCUZM5eAOgURdE5vEyOEh
+U+vLmaefMb2OYmjC50chN57Q2qwhqGwzmawbL2Ua8e+VhyAPVLDtfimqGLw+vfyh
+Pj+Rvsq2vIINJz8CYKER6BWKBBr1+OVZniZ9QAYoW26SY5fGd6YTUN3+aSWdsNiM
+I11SCUS5ebnTCGpLJY80gOYGTrYY7CJbtfgrzSwjS53zIFpmYa5l8d02NKCyyT37
+SOciPKSJVtPuNGK5oaMvNlC7UlxdQWPy4QaT50p9+PgPYlx3LfuNigLDMU5Eoe2t
+KZmT6bs8f/yJ1y4YnUVx1peT7WXr+AQr9oO0jBcTaoI25KHZ+l6BDu+YmzBIM4In
+VFzIUS6DGNAOH2JDhutF
+=FNUY
 -----END PGP SIGNATURE-----
