@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/wireshark-99999999.ebuild,v 1.1 2014/10/30 23:53:12 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/wireshark-99999999.ebuild,v 1.2 2014/11/02 12:09:02 swift Exp $
 
 EAPI=5
 inherit autotools eutils fcaps git-r3 multilib qt4-r2 user
@@ -27,7 +27,7 @@ GTK_COMMON_DEPEND="
 	x11-misc/xdg-utils
 	virtual/freedesktop-icon-theme
 "
-RDEPEND="
+CDEPEND="
 	>=dev-libs/glib-2.14:2
 	netlink? ( dev-libs/libnl:3 )
 	adns? ( >=net-dns/c-ares-1.5 )
@@ -54,7 +54,6 @@ RDEPEND="
 		dev-qt/qtwidgets:5
 		x11-misc/xdg-utils
 	)
-	selinux? ( sec-policy/selinux-wireshark )
 	smi? ( net-libs/libsmi )
 	ssl? ( net-libs/gnutls )
 	zlib? ( sys-libs/zlib !=sys-libs/zlib-1.2.4 )
@@ -62,7 +61,7 @@ RDEPEND="
 # We need perl for `pod2html`.  The rest of the perl stuff is to block older
 # and broken installs. #455122
 DEPEND="
-	${RDEPEND}
+	${CDEPEND}
 	dev-lang/perl
 	!<virtual/perl-Pod-Simple-3.170
 	!<perl-core/Pod-Simple-3.170
@@ -77,6 +76,10 @@ DEPEND="
 	sys-devel/bison
 	sys-devel/flex
 	virtual/pkgconfig
+"
+RDEPEND="
+	${CDEPEND}
+	selinux? ( sec-policy/selinux-wireshark )
 "
 
 pkg_setup() {
